2008-04-19  Bruno Haible  <bruno@clisp.org>

	Don't commit files brought in by autogen.sh.
	* build-aux/config.guess: Remove from git repository.
	* build-aux/config.sub: Likewise.

2008-04-19  Bruno Haible  <bruno@clisp.org>

	Add support for building as shared library on Cygwin and mingw.
	* autogen.sh: Insert LIBUNISTRING_DLL_VARIABLE tokens into
	lib/unictype.h and lib/uninorm.h.
	* gnulib-local/lib/unictype.h.diff: Add an include of
	<unistring/woe32dll.h>.
	* gnulib-local/lib/uninorm.h.diff: New file.
	* gnulib-local/Makefile.am (EXTRA_DIST): Add it.
	* lib/unistring/woe32dll.in.h: New file.
	* woe32dll/unistring-exports.c: New file.
	* woe32dll/export.h: New file, from GNU gettext.
	* Makefile.am (EXTRA_DIST): Add it.
	* configure.ac (WOE32DLL): New conditional.
	(DLL_VARIABLE): New substituted variable.
	(AC_CONFIG_FILES): Add lib/unistring/woe32dll.h.
	* lib/Makefile.am (nobase_include_HEADERS): Add unistring/woe32dll.h.
	(libunistring_la_SOURCES) [WOE32DLL]: Add unistring-exports.c.
	(libunistring_la_LDFLAGS) [WOE32DLL]: Add --export-all-symbols linker
	flag.
	(config.h): Remove unused macro DLL_VARIABLE.

2008-04-19  Bruno Haible  <bruno@clisp.org>

	Don't use unreliable linker options on native Windows.
	* m4/woe32-dll.m4: New file, from GNU gettext.
	* configure.ac: Invoke gl_WOE32_DLL.

2008-04-11  Bruno Haible  <bruno@clisp.org>

	Limit the exported symbols through a config.h trick.
	* m4/exported.m4: New file, from GNU gettext.
	* lib/exported.sh.in: New file, from GNU gettext.
	* configure.ac: Invoke gt_GLOBAL_SYMBOL_PIPE.
	(AC_CONFIG_FILES): Add lib/exported.sh.
	* lib/declared.sh: New file, borrowing from GNU gettext's moopp.
	* lib/Makefile.am (HEADERS_WITH_EXTERNS): New variable.
	(libunistring.sym, config.h): New rules.
	(MOSTLYCLEANFILES, MAINTAINERCLEANFILES): Update accordingly.
	(EXTRA_DIST): Add libunistring.sym.
	* tests/Makefile.am (DEFAULT_INCLUDES): New variable.
	* HACKING: Require GNU sed.
